--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
  <div class="container">
+     <div id="user_header">
         <% if current_user %>
           Logged in as <%= current_user.email %>.
           <%= link_to "Log Out", logout_path %>
@@ -15,6 +16,7 @@
           <%= link_to "Sign Up", signup_path %> or
           <%= link_to "Log In", login_path %>
         <% end %>
+      </div>
 
 
 
