--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,12 +1,17 @@
 <%= content_for(:title, "Photo Sharing!") %>
+<%#NOTE: MAIN PAGE IS USERS INDEX. THIS PROVIDED FOR ILLUSTRATIVE PURPOSES ONLY %>
 
 <h1> Photo Sharing! </h1>
 
 <% @users.each do |user| %>
   <%= user.name %>
+  <ul class="pics">
   <% user.photos.each do |photo| %>
-    <%= link_to photo.image, user_photo_path(user, photo) %>
+          <li>
+          <%= link_to image_tag(photo.image.url(:thumb)), user_photo_path(user, photo) %>
+          </li>
   <% end %>
+  </ul>
 <% end %>
 
 
