--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,19 +1,5 @@
 <%= content_for(:title, "Photo Sharing!") %>
 
+<%= render 'form' %>
 
-<%= form_for [@user, @photo], :html => { :multipart => true} do |f| %>
-  <div class="form-group">
-    <%= f.label :image %>
-    <%= f.file_field :image %>
-  </div>
 
-  <div class="form-group">
-    <%= f.label :description %>
-    <%= f.text_field :description, :class => "form-control" %>
-  </div>
-
-   <%= f.hidden_field :user_id, :value => @user.id %>
-   
-  <div class="form-group"><%= f.submit "Submit", :class => 'btn btn-info' %></div>
-
-<% end %>
