--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -26,7 +26,13 @@
 <% end %>
 </br>
 
-
+<% if @user.id == current_user.id %>
+     <p><%= link_to "Edit", edit_user_photo_path(@user, @photo), :class => "btn btn-default" %></p>
+     <p><%= link_to "Delete", user_photo_path(@user, @photo), :data => {
+                         :confirm => "You sure you want to delete this photo?",
+                         :method => "delete"},
+                         :class => "btn btn-danger" %></p> 
+<% end %>
 
 
 
