--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,9 +8,9 @@
   <h6> Photos: </h6>
   <% user.photos.each do |photo| %>
     <%= link_to image_tag(photo.image.url(:medium)), user_photo_path(user, photo) %></br>
-	<p><%= photo.description %></p></br>
-	</br>
+	<p><%= photo.description %></p>
   <% end %>
+</br>
  <% else %>
    <h6> No photos yet. <h6>
  <% end %>
